# yuralume-core

./: .dockerignore  .env.container.example  .env.example  .gitignore  LICENSE  Makefile  README.ja.md  README.md  README.zh_TW.md  alembic.ini  docker-compose.container.yml  docker-compose.yml  image-profiles.json  pyproject.toml  run-dev.cmd  usage-prices.openai.json  video-profiles.json
.github/workflows/: publish-images.yml
alembic/: env.py
alembic/versions/: a1b2c3d40100_character_encounter_intents.py  a1c7f9d42e10_memory_items_structured.py  a9i5e2h70024_memory_tags_embedding.py  aa01b5g70025_character_feature_models.py  aa9e2f70025_scene_beat_fields.py  ab1f3a80026_character_arc_template.py  ac2g4b90027_story_arc_tone.py  ad3h5c10028_feed_posts.py  ae4i6d20029_feed_reactions.py  af5j7e30030_feed_comments.py  b2c4d6e80101_web_push_notifications.py  b3d8e1f56a20_add_state_last_active_at.py  b8d2e4f60302_character_freeze.py  bg6k8f40031_operator_profiles.py  bh7l9g50032_memory_participants.py  bi8m0h60033_character_unread_feed_reply_count.py  bj9n1i70034_character_voice_profile.py  bp5t7u20040_rpg_campaigns.py  (+108 more)
docs/: CUSTOM_MEDIA_GATEWAY_SPEC.md  CUSTOM_TTS_SERVER_SPEC.md
frontend/: index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
scripts/: build_character_card_packs.py  check_clock_guard.py  clock_guard_allowlist.txt  export_feature_key_manifest.py  llm_capacity_probe.py  self_host_smoke.py  test_openai_image.py  trigger_rss_pipeline.py  trigger_video_feed_post.py  trigger_video_generate.py
tests/: conftest.py
tts/: HOWTO.md
(+1734 files in other folders)
