[project]
name = "yuralume"
version = "0.1.0"
description = "Modular AI character backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "bcrypt>=4.0,<5.0",
    "email-validator>=2.0,<3.0",
    "fastapi>=0.115.0,<1.0.0",
    "feedparser>=6.0.11,<7.0.0",
    "holidays>=0.60,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "pgvector>=0.3.6,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pyjwt>=2.8,<3.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "python-multipart>=0.0.26",
    "pywebpush>=2.0.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "readability-lxml>=0.8.1,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "tzdata>=2025.2",
    "uvicorn>=0.32.0,<1.0.0",
    "websockets>=13.0,<16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "testcontainers[postgres]>=4.9.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kokoro_link"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "evals: LLM-as-judge regression evals (require KOKORO_EVALS_*_ENDPOINT, opt-in via `pytest -m evals`)",
]
addopts = "-m 'not evals'"
